--- a/servidor_minecraft/server.properties
+++ b/servidor_minecraft/server.properties
@@ -1,7 +1,7 @@
 #Minecraft server properties
-#Sat Dec 14 20:53:31 UTC 2024
+#Tue Dec 17 16:33:02 UTC 2024
 allow-flight=true
-allow-nether=false
+allow-nether=true
 broadcast-console-to-ops=true
 broadcast-rcon-to-ops=true
 difficulty=hard
